<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tesideagnoi.dei.unipd.it.driversupporter.InfoViewerActivityFragment">


<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/StatGrid">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SpeedLabel"
        android:id="@+id/speedLabel"
        android:layout_row="0"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default0Value"
        android:id="@+id/speedValue"
        android:layout_row="0"
        android:layout_column="1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LatitudeLabel"
        android:id="@+id/latLabel"
        android:layout_row="0"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AccelerationLabel"
        android:id="@+id/accLabel"
        android:layout_row="1"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default0Value"
        android:id="@+id/accValue"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LongitudeLabel"
        android:id="@+id/lonLabel"
        android:layout_row="1"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default00Value"
        android:id="@+id/lonValue"
        android:layout_row="1"
        android:layout_column="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default0Value"
        android:id="@+id/altValue"
        android:layout_row="2"
        android:layout_column="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AccelerationXLabel"
        android:id="@+id/xAccLabel"
        android:layout_row="3"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default0Value"
        android:id="@+id/xAccValue"
        android:layout_row="3"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/GravityXLabel"
        android:id="@+id/xGLabel"
        android:layout_row="3"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default0Value"
        android:id="@+id/xG"
        android:layout_row="3"
        android:layout_column="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AltitudeLabel"
        android:id="@+id/altLabel"
        android:layout_row="2"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AccelerationYLabel"
        android:id="@+id/yAccLabel"
        android:layout_row="4"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default0Value"
        android:id="@+id/yAccValue"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/GravityYLabel"
        android:id="@+id/yGLabel"
        android:layout_row="4"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default00Value"
        android:id="@+id/latValue"
        android:layout_row="0"
        android:layout_column="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default0Value"
        android:id="@+id/yG"
        android:layout_row="4"
        android:layout_column="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AccelerationZLabel"
        android:id="@+id/zAccLabel"
        android:layout_row="5"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default0Value"
        android:id="@+id/zAccValue"
        android:layout_row="5"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/GravityZLabel"
        android:id="@+id/zGLabel"
        android:layout_row="5"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default0Value"
        android:id="@+id/zG"
        android:layout_row="5"
        android:layout_column="4" />


</GridLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Switch"
        android:id="@+id/controlService"
        android:layout_below="@+id/StatGrid"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_below="@+id/controlService"
        android:layout_alignParentStart="true" />
</RelativeLayout>